--- a/yaml_files/scans/Vector/VectorDM_high_mass_MN.yaml
+++ b/yaml_files/scans/Vector/VectorDM_high_mass_MN.yaml
@@ -1,17 +1,12 @@
 #################################################################################################
 #
-# Example YAML file for testing the VectorDM model in GAMBIT.
-# Standard Model, nuclear and DM halo parameter values are same as in arXiv:1512.06458.
-#
-# Author: Ankit Beniwal, University of Adelaide
-# Email : ankit.beniwal@adelaide.edu.au
-# Last modified: Aug, Sep 2017; Jan 2018
+#      VectorDM, high mass region, MultiNest.
 #
 #################################################################################################
 
 Parameters:
 
-  StandardModel_SLHA2: !import ../include/StandardModel_SLHA2_scan.yaml
+  StandardModel_SLHA2: !import ../../include/StandardModel_SLHA2_scan.yaml
 
   StandardModel_Higgs:
     mH:
@@ -37,8 +32,10 @@ Parameters:
   Halo_gNFW_rho0:
     rho0:
       range: [0.2, 0.8]
-    v0: 235.0
-    vesc: 550.0
+    v0: 
+      range: [216, 264]
+    vesc:
+      range: [437, 629]
     vrot: 235.0
     rs: 20.0
     r_sun: 8.5
@@ -57,18 +54,63 @@ ObsLikes:
     # LHC likelihoods
     - capability: lnL_Higgs_invWidth
       purpose:    LogLike
+      
+    # Precision physics likelihoods
+    - capability: lnL_h_mass
+      purpose:    LogLike
 
-    # Dark matter likelihoods
+    # Relic density
     - capability: lnL_oh2
       purpose:    LogLike
 
+    # Indirect detection
     - capability: lnL_FermiLATdwarfs
       purpose:    LogLike
-
-    - capability: LUX_2013_LogLikelihood
+      
+    - capability: IC79_loglike
+      purpose:    LogLike
+      
+    # Direct detection  
+    - capability: LUX_2016_LogLikelihood
       purpose:    LogLike
 
     - capability: XENON1T_2017_LogLikelihood
+      purpose:    LogLike
+      
+    - capability: PandaX_2016_LogLikelihood
+      purpose:    LogLike
+      
+    - capability: PandaX_2017_LogLikelihood
+      purpose:    LogLike
+      
+    - capability: PICO_60_2017_LogLikelihood
+      purpose:    LogLike
+      
+    - capability: CRESST_II_LogLikelihood
+      purpose:    LogLike
+      
+    - capability: CDMSlite_LogLikelihood
+      purpose:    LogLike
+      
+    # SI nuclear nuisance parameter likelihood
+    - capability: lnL_SI_nuclear_parameters
+      purpose:    LogLike
+      
+    # DM Local Halo likelihoods
+    - capability: lnL_rho0
+      purpose: LogLike
+      
+    - capability: lnL_v0
+      purpose: LogLike
+
+    - capability: lnL_vesc
+      purpose: LogLike
+
+    # SM nuisance parameter likelihoods
+    - capability: lnL_t_mass
+      purpose:    LogLike
+      
+    - capability: lnL_alpha_s
       purpose:    LogLike
       
     # Other observables
@@ -99,9 +141,23 @@ Rules:
       oh2_obs: 0.1199
       oh2_obserr: 0.0027
 
+  # Set v0 to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
+  - capability: lnL_v0
+    function: lnL_v0_gassian
+    options:
+      v0_obs: 240
+      v0_obserr: 8
+      
+  # Set vesc to 533 +/- 32 km/s based on RAVE survey [arXiv:1309.4293]
+  - capability: lnL_vesc
+    function: lnL_vesc_gassian
+    options:
+      v0_obs: 533
+      v0_obserr: 31.9
+
   # Choose to rescale signals in direct and indirect detection by the relic density fraction
   - capability: RD_fraction
-    function: RD_fraction_rescaled
+    function: RD_fraction_leq_one
 
   # Choose to use detailed Fermi Pass-8 dwarfs likelihoood from gamLike
   - capability: lnL_FermiLATdwarfs
@@ -138,15 +194,15 @@ Printer:
 ##############################################################################################
 Scanner:
 
-  use_scanner: diver
+  use_scanner: mn
 
   scanners:
 
     mn:
       plugin: multinest
       like: LogLike
-      nlive: 1
-      tol: 0.7
+      nlive: 20000
+      tol: 1E-4
 
     diver:
       plugin: diver
@@ -185,4 +241,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "scans/Vector/"
+  default_output_path: "scans/Vector/high_mass/MN"
