--- a/yaml_files/scans/Vector/VectorDM_high_mass_diver.yaml
+++ b/yaml_files/scans/Vector/VectorDM_high_mass_diver.yaml
@@ -1,32 +1,24 @@
 #################################################################################################
 #
-# Example YAML file for testing the DiracDM model in GAMBIT.
-# Standard Model, nuclear and DM halo parameter values are same as in arXiv:1512.06458. 
-#
-# Author: Ankit Beniwal, University of Adelaide
-# Email : ankit.beniwal@adelaide.edu.au
-# Last modified:  Aug, Sep 2017; Jan 2018
+#      VectorDM, high mass region, diver.
 #
 #################################################################################################
 
 Parameters:
 
-  StandardModel_SLHA2: !import ../include/StandardModel_SLHA2_scan.yaml
+  StandardModel_SLHA2: !import ../../include/StandardModel_SLHA2_scan.yaml
 
   StandardModel_Higgs:
     mH:
       range: [124.1, 127.3]
 
-  DiracDM:
-    mF: 
+  VectorDM:
+    mV: 
       range: [45., 10000.]
+      prior_type: log      
+    lambda_hV: 
+      range: [1e-4, 56.23]
       prior_type: log
-    lF: 
-      range: [1e-6, 1]
-      prior_type: log
-    cosXI:
-      range: [-1., 1]
-      prior_type: cos
 
   nuclear_params_sigmas_sigmal:
     sigmas:
@@ -40,8 +32,10 @@ Parameters:
   Halo_gNFW_rho0:
     rho0:
       range: [0.2, 0.8]
-    v0: 235.0
-    vesc: 550.0
+    v0: 
+      range: [216, 264]
+    vesc:
+      range: [437, 629]
     vrot: 235.0
     rs: 20.0
     r_sun: 8.5
@@ -60,18 +54,63 @@ ObsLikes:
     # LHC likelihoods
     - capability: lnL_Higgs_invWidth
       purpose:    LogLike
+      
+    # Precision physics likelihoods
+    - capability: lnL_h_mass
+      purpose:    LogLike
 
-    # Dark matter likelihoods
+    # Relic density
     - capability: lnL_oh2
       purpose:    LogLike
 
+    # Indirect detection
     - capability: lnL_FermiLATdwarfs
       purpose:    LogLike
-
-    - capability: LUX_2013_LogLikelihood
+      
+    - capability: IC79_loglike
+      purpose:    LogLike
+      
+    # Direct detection  
+    - capability: LUX_2016_LogLikelihood
       purpose:    LogLike
 
     - capability: XENON1T_2017_LogLikelihood
+      purpose:    LogLike
+      
+    - capability: PandaX_2016_LogLikelihood
+      purpose:    LogLike
+      
+    - capability: PandaX_2017_LogLikelihood
+      purpose:    LogLike
+      
+    - capability: PICO_60_2017_LogLikelihood
+      purpose:    LogLike
+      
+    - capability: CRESST_II_LogLikelihood
+      purpose:    LogLike
+      
+    - capability: CDMSlite_LogLikelihood
+      purpose:    LogLike
+      
+    # SI nuclear nuisance parameter likelihood
+    - capability: lnL_SI_nuclear_parameters
+      purpose:    LogLike
+      
+    # DM Local Halo likelihoods
+    - capability: lnL_rho0
+      purpose: LogLike
+      
+    - capability: lnL_v0
+      purpose: LogLike
+
+    - capability: lnL_vesc
+      purpose: LogLike
+
+    # SM nuisance parameter likelihoods
+    - capability: lnL_t_mass
+      purpose:    LogLike
+      
+    - capability: lnL_alpha_s
       purpose:    LogLike
       
     # Other observables
@@ -86,7 +125,11 @@ ObsLikes:
       
     - capability: sigma_SI_p
       purpose:    Observable
-      function:   sigma_SI_vnqn_FermionDMHiggsPortal
+      function:   sigma_SI_p_simple
+
+    - capability: sigma_SI_n
+      purpose:    Observable
+      function:   sigma_SI_n_simple
 
 ##############################################################################################
 Rules:
@@ -98,15 +141,27 @@ Rules:
       oh2_obs: 0.1199
       oh2_obserr: 0.0027
 
+  # Set v0 to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
+  - capability: lnL_v0
+    function: lnL_v0_gassian
+    options:
+      v0_obs: 240
+      v0_obserr: 8
+      
+  # Set vesc to 533 +/- 32 km/s based on RAVE survey [arXiv:1309.4293]
+  - capability: lnL_vesc
+    function: lnL_vesc_gassian
+    options:
+      v0_obs: 533
+      v0_obserr: 31.9
+
   # Choose to rescale signals in direct and indirect detection by the relic density fraction
   - capability: RD_fraction
-    function: RD_fraction_rescaled
+    function: RD_fraction_leq_one
 
   # Choose to use detailed Fermi Pass-8 dwarfs likelihoood from gamLike
   - capability: lnL_FermiLATdwarfs
     function:  lnL_FermiLATdwarfs_gamLike
-    options:
-      non_self_conjugate: true
 
   # Choose to use DarkSUSY's yield tables for indirect detection
   - capability: SimYieldTable
@@ -116,15 +171,15 @@ Rules:
 
   # Use DarkBit's own calculations of the direct detection couplings
   - capability: DD_couplings
-    function: DD_couplings_DiracDM
+    function: DD_couplings_VectorDM
 
   # Choose to compute decay rates from the DecayBit module
   - capability: decay_rates
     function: all_decays
 
   # Choose to obtain spectrum from the SpecBit module
-  - capability: DiracDM_spectrum
-    function: get_DiracDM_spectrum
+  - capability: VectorDM_spectrum
+    function: get_VectorDM_spectrum
 
 ##############################################################################################
 Printer:
@@ -132,9 +187,9 @@ Printer:
   printer: hdf5
 
   options:
-    output_file: "DDM_test.hdf5"
+    output_file: "VDM_test_diver.hdf5"
     delete_file_on_restart: true
-    group: "/DDM"    
+    group: "/VDM"    
 
 ##############################################################################################
 Scanner:
@@ -186,4 +241,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "scans/Dirac/"
+  default_output_path: "scans/Vector/high_mass/diver"
