--- a/yaml_files/MSSM9.yaml
+++ b/yaml_files/MSSM9.yaml
@@ -45,7 +45,7 @@ Parameters:
       ranges: [-1e4, -1e2, 1e2, 1e4]
     M2:
       prior_type: double_log_flat_join
-      ranges: [-1e4, -1e2, 1e2, 1e4]
+      ranges: [0, 0, 1e2, 1e4]
     M3:
       prior_type: double_log_flat_join
       ranges: [-1e4, -1e2, 1e2, 1e4]
