Added check in DecayBit that invalidates points with stable charged particles (lifetime > age of universe). Also added the YAML option "allow_stable_charged_particles" with default value false, in case we ever want to switch off this check. Also, simplified a few lines of code in ColliderBit_eventloop.cpp.
	modified:   ColliderBit/src/ColliderBit_eventloop.cpp
	modified:   DecayBit/src/DecayBit.cpp
	modified:   yaml_files/MSSM9.yaml
	modified:   yaml_files/MSSMEW.yaml

--- a/yaml_files/MSSMEW.yaml
+++ b/yaml_files/MSSMEW.yaml
@@ -160,6 +160,8 @@ Rules:
   # Choose to get decays from DecayBit proper, not from an SLHA file.
   - capability: decay_rates
     function: all_decays
+    options:
+      allow_stable_charged_particles: false
 
   # Choose to get the spectrum from SpecBit proper, not an SLHA file.
   # Options set to match benchmark point specified in SpecBit/MSSM_benchmark_points/LesHouches.in.MSSM_1
