--- a/yaml_files/MSSMEW.yaml
+++ b/yaml_files/MSSMEW.yaml
@@ -89,7 +89,7 @@ Scanner:
       plugin: diver
       like: LogLike
       NP: 6000
-      convthresh: 1e-2
+      convthresh: 1e-3
       verbosity: 1
 
 
@@ -97,8 +97,8 @@ ObsLikes:
 
     # Calculate SM quantities
 
-    #- capability: lnL_t_mass
-    #  purpose:    LogLike
+    - capability: lnL_t_mass
+      purpose:    LogLike
 
     #- capability: lnL_mbmb
     #  purpose:    LogLike
@@ -106,8 +106,8 @@ ObsLikes:
     #- capability: lnL_alpha_em
     #  purpose:    LogLike
 
-    #- capability: lnL_alpha_s
-    #  purpose:    LogLike
+    - capability: lnL_alpha_s
+      purpose:    LogLike
 
     #- capability: lnL_W_mass
     #  purpose:    LogLike
