--- a/yaml_files/MSSMEW.yaml
+++ b/yaml_files/MSSMEW.yaml
@@ -11,7 +11,7 @@
 Parameters:
 
   # SM nuisance parameters fixed for now.
-  StandardModel_SLHA2: !import include/StandardModel_SLHA2_defaults.yaml
+  StandardModel_SLHA2: !import include/StandardModel_SLHA2_scan.yaml
 
   MSSM11atQ_mA:
     Ad_3:
@@ -29,7 +29,7 @@ Parameters:
     M3:
       fixed_value: 5000
     Qin:
-      fixed_value: 10000
+      fixed_value: 3000  # 3000 = sqrt(mQL3*mUR3) = mSUSY, since we have mQL3 = mUR3 = mq2 = (3000)^2
     TanBeta:
       range: [3.0, 50.0]
       prior_type: flat
@@ -95,30 +95,14 @@ Scanner:
 
 ObsLikes:
 
-    # Calculate SM quantities
+    # Likelihoods for SM nuisance parameters
+    - purpose:    LogLike
+      capability: lnL_t_mass
 
-    #- capability: lnL_t_mass
-    #  purpose:    LogLike
+    - purpose:    LogLike
+      capability: lnL_alpha_s
 
-    #- capability: lnL_mbmb
-    #  purpose:    LogLike
-
-    #- capability: lnL_alpha_em
-    #  purpose:    LogLike
-
-    #- capability: lnL_alpha_s
-    #  purpose:    LogLike
-
-    #- capability: lnL_W_mass
-    #  purpose:    LogLike
-
-    #- capability: lnL_sinW2_eff
-    #  purpose:    LogLike
-
-    #- capability: lnL_deltarho
-    #  purpose:    LogLike
-
-    # Calculate the LHC likelihood
+    # Combined LHC likelihood
     - purpose:    LogLike
       capability: LHC_Combined_LogLike
 
@@ -138,6 +122,9 @@ ObsLikes:
     - purpose:    LogLike
       capability: OPAL_Chargino_Leptonic_LLike
 
+    - purpose:    LogLike
+      capability: OPAL_Neutralino_Hadronic_LLike
+
     # Other observables
     - purpose:    likelihood_details
       capability: LHC_LogLikes
@@ -147,6 +134,15 @@ ObsLikes:
 
     - purpose:    Observable
       capability: LHCEventLoopInfo
+
+    - purpose:    Observable
+      capability: mw
+
+    - purpose:    Observable
+      capability: deltarho
+
+    - purpose:    Observable
+      capability: prec_sinW2_eff
 
     - purpose:    Observable
       capability: SLHA1_violation
@@ -250,9 +246,9 @@ Rules:
   # Choose statistical settings for Monte Carlo event generator
   - capability: MC_ConvergenceSettings
     options:
-      min_nEvents: [5000]
-      max_nEvents: [50000]
-      events_between_convergence_checks: [5000]
+      min_nEvents: [20000]
+      max_nEvents: [100000]
+      events_between_convergence_checks: [20000]
       target_fractional_uncert: [0.3]
       halt_when_systematic_dominated: true
       all_SR_must_converge: false
@@ -276,16 +272,6 @@ Rules:
       xsec_vetos: [0.028]  # 0.028 fb corresponds to ~1 expected event at L = 36 fb^-1.
 
 
-  # NOTE: The use of Delphes currently only works when running with OMP_NUM_THREADS=1
-  - capability: DetectorSim
-    type: "Gambit::ColliderBit::DelphesVanilla"
-    function: getDelphes
-    options:
-      # useDetector defaults to false for getDelphes, which ignores all "Det" analyses and disables Delphes
-      useDetector: [false]
-      # Specify the location of the Delphes cards for the two Pythia instances (we assume ATLAS in both cases here)
-      delphesConfigFiles: ["ColliderBit/data/delphes_card_ATLAS.tcl"]
-
   # BuckFast for ATLAS rules and options
   - capability: SimpleSmearingSim
     type: "ColliderBit::BuckFastSmearATLAS"
@@ -294,7 +280,7 @@ Rules:
       # useDetector defaults to true for getBuckFastATLAS. Set it to false to ignore all ATLAS analyses and disable the BuckFast ATLAS simulator
       useDetector: [true]
       # Choose which type of event to use: for parton level, change partonOnly to true
-      partonOnly: [true]
+      partonOnly: [false]
       antiktR: [0.4]
 
   # BuckFast for CMS rules and options
@@ -305,7 +291,7 @@ Rules:
       # useDetector defaults to true for getBuckFastCMS. Set it to false to ignore all CMS analyses and disable the BuckFast CMS simulator
       useDetector: [true]
       # Choose which type of event to use: for parton level, change partonOnly to true
-      partonOnly: [true]
+      partonOnly: [false]
       antiktR: [0.4]
 
   # ATLAS analysis setup.
@@ -335,17 +321,15 @@ Rules:
                    #"CMS_13TeV_1LEPStop_36invfb"
                    #"CMS_13TeV_2LEPStop_36invfb"
 
-
-
-    # Use lognormal errors when marginalising the LHC Poisson likelihoods over systematic uncertainties
-    # Can change "_lognormal_" to "_gaussian_" if you prefer
+  # Use lognormal errors when marginalising the LHC Poisson likelihoods over systematic uncertainties
+  # Can change "_lognormal_" to "_gaussian_" if you prefer
   - capability: LHC_LogLikes
     backends:
     - {capability: lnlike_marg_poisson_lognormal_error}
 
 
-    # Set the names of key log files
 
+# Set the names of key log files
 Logger:
 
   redirection:
@@ -360,6 +344,8 @@ Logger:
     [Dependency Resolver] : "dep_resolver.log"
 
 KeyValues:
+
+  debug: false
 
   dependency_resolution:
     prefer_model_specific_functions: true
