--- a/yaml_files/MSSMEW.yaml
+++ b/yaml_files/MSSMEW.yaml
@@ -22,10 +22,10 @@ Parameters:
       fixed_value: 0
     M1:
       prior_type: double_log_flat_join
-      ranges: [-1e4, -1, 1, 1e4]
+      ranges: [-1e4, -1e1, 1e1, 1e4]
     M2:
       prior_type: double_log_flat_join
-      ranges: [0, 0, 1, 1e4]
+      ranges: [0, 0, 1e1, 1e4]
     M3:
       fixed_value: 5000
     Qin:
