Added check for NaN xsec estimate from Pythia. Will invalidate point. (But we should understand why it happens.) Also, silenced Pythia a bit in MSSMEW.yaml
	modified:   ColliderBit/src/ColliderBit_eventloop.cpp
	modified:   yaml_files/MSSMEW.yaml

--- a/yaml_files/MSSMEW.yaml
+++ b/yaml_files/MSSMEW.yaml
@@ -262,7 +262,7 @@ Rules:
       # Pythia_doc_path defaults to the xmldoc directory of the default Pythia
       # backend. So, this must only be set if the user chooses a different Pythia.
       # Pythia_doc_path: "Backends/installed/Pythia/8.212/share/Pythia8/xmldoc/"
-      Pythia_SUSY_LHC_13TeV_EWonly: ["Print:quiet = off",
+      Pythia_SUSY_LHC_13TeV_EWonly: ["Print:quiet = on",
                                      "Next:numberCount = 0",
                                      "Random:setSeed = on",
                                      "Beams:eCM = 13000",
