Fixed mNu = 0 issue in calculation of Theta  Changes to be committed: 	modified:   NeutrinoBit/src/NeutrinoBit.cpp 	modified:   yaml_files/RHN.yaml

--- a/yaml_files/RHN.yaml
+++ b/yaml_files/RHN.yaml
@@ -104,9 +104,15 @@ Printer:
 
 Scanner:
 
-  use_scanner: de
+  use_scanner: random
 
   scanners:
+
+    random:
+      plugin: random
+      point_number: 1
+      like: LogLike
+
     de:
       plugin: diver
       like: LogLike
@@ -127,8 +133,8 @@ ObsLikes:
   - capability: lnL_W_mass
     purpose: LogLike
 
-  - capability: lnL_sinW2
-    purpose: LogLike
+#  - capability: lnL_sinW2
+#    purpose: LogLike
 
   - capability: lnL_Z_inv_width
     purpose: LogLike
