Removed L_Xe and L_Ge from models and crated unified lnL_0nubb  Changes to be committed: 	modified:   Models/include/gambit/Models/models/RightHandedNeutrinos.hpp 	modified:   Models/include/gambit/Models/models/RightHandedNeutrinos_diff.hpp 	modified:   NeutrinoBit/include/gambit/NeutrinoBit/NeutrinoBit_rollcall.hpp 	modified:   NeutrinoBit/src/RightHandedNeutrinos.cpp 	modified:   yaml_files/RHN.yaml

--- a/yaml_files/RHN.yaml
+++ b/yaml_files/RHN.yaml
@@ -86,11 +86,6 @@ Parameters:
     ImOm12:
       range: [-5, 5]
 #      fixed_value: 0.0
-    L_Ge:
-      range: [0.159, 0.193]
-    L_Xe:
-      range: [0.178, 0.211]
-
 
 Priors:
 
@@ -150,8 +145,8 @@ ObsLikes:
   - capability: lnLlepuniv
     purpose: LogLike
 
-#  - capability: lnL0nubb
-#    purpose: LogLike
+  - capability: lnL0nubb
+    purpose: LogLike
 
   - capability: lnLckm
     purpose: LogLike
