--- a/yaml_files/MSSMEW.yaml
+++ b/yaml_files/MSSMEW.yaml
@@ -183,6 +183,10 @@ Rules:
       use_higgs_2loop_at_at: true
       use_higgs_2loop_atau_atau: true
       invalid_point_fatal: false
+      # Only consider chargino masses > 45 GeV as masses lighter than this are excluded by 
+      # LEP measurements of the Z width.
+      mass_cut: [ ["|~chi+_1|", 45., 1e6] ]
+
 
   # This simply relables the "unimproved_MSSM_spectrum" to "MSSM_spectrum",
   # so that things depending on "MSSM_spectrum" will be happy.
