Modified MSSMEW to include new OPAL limits and Z invisible width

--- a/yaml_files/MSSMEW.yaml
+++ b/yaml_files/MSSMEW.yaml
@@ -126,6 +126,13 @@ ObsLikes:
     - purpose:    LogLike
       capability: OPAL_Neutralino_Hadronic_LLike
 
+    - purpose:    LogLike
+      capability: OPAL_Degenerate_Chargino_LLike
+
+    # Other likelihoods
+    - purpose:    LogLike
+      capability: lnL_Z_invisible_width
+
     # Observables (not included in likelihood)
     - purpose:    likelihood_details
       capability: LHC_LogLikes
