Fixed a bug in module_macros_incore.hpp which prevented us from setting module exceptions to be fatal/non-fatal from the YAML file. Updated MSSM9.yaml and MSSMEW.yaml to have non-fatal errors for the physics modules, to avoid chrashing production scans due to a rare problem point. (This means we need to pay close attention to the logs...)
	modified:   Elements/include/gambit/Elements/module_macros_incore.hpp
	modified:   yaml_files/MSSM9.yaml
	modified:   yaml_files/MSSMEW.yaml

--- a/yaml_files/MSSM9.yaml
+++ b/yaml_files/MSSM9.yaml
@@ -629,3 +629,16 @@ KeyValues:
 
   default_output_path: "runs/MSSM9/"
 
+  # We set the errors from the physics modules to be non-fatal
+  # to avoid crashing the entire scan due to a rare problem point.
+  # This means we should pay close attention to the log files...
+  exceptions:
+    ColliderBit_error: non-fatal
+    DarkBit_error: non-fatal
+    DecayBit_error: non-fatal
+    FlavBit_error: non-fatal
+    PrecisionBit_error: non-fatal
+    SpecBit_error: non-fatal
+
+
+
