Added RK calculation (approximated) and fixed RK* to the experimental measured value

--- a/yaml_files/RHN.yaml
+++ b/yaml_files/RHN.yaml
@@ -145,6 +145,9 @@ ObsLikes:
   - capability: lnLlepuniv
     purpose: LogLike
 
+  - capability: LUV_LL
+    purpose: LogLike
+
   - capability: lnL_0nubb
     purpose: LogLike
 
