--- a/yaml_files/MSSM9.yaml
+++ b/yaml_files/MSSM9.yaml
@@ -106,8 +106,8 @@ Scanner:
     de:
       plugin: diver
       like: LogLike
-      NP: 6000
-      convthresh: 1e-3
+      NP: 19200
+      convthresh: 1e-5
       verbosity: 1
       lambdajDE: false
 
@@ -184,12 +184,6 @@ ObsLikes:
     - capability: lnL_W_mass
       purpose:    LogLike
 
-    #- capability: lnL_sinW2_eff
-    #  purpose:    LogLike
-
-    #- capability: lnL_deltarho
-    #  purpose:    LogLike
-
     - capability:  lnL_gm2
       purpose:     LogLike
 
@@ -241,26 +235,11 @@ ObsLikes:
     - capability: lnL_rho0
       purpose: LogLike
 
-    #- capability: lnL_vrot
-    #  purpose: LogLike
-
-    #- capability: lnL_v0
-    #  purpose: LogLike
-
-    #- capability: lnL_vesc
-    #  purpose: LogLike
-
     # SM nuisance parameter likelihoods
     - capability: lnL_t_mass
       purpose:    LogLike
 
     #- capability: lnL_mbmb
-    #  purpose:    LogLike
-
-    #- capability: lnL_light_quark_masses
-    #  purpose:    LogLike
-
-    #- capability: lnL_alpha_em
     #  purpose:    LogLike
 
     - capability: lnL_alpha_s
@@ -313,10 +292,6 @@ ObsLikes:
 
 Rules:
 
-  # Tell all functions that are able to dump SLHA files to do so.
-  #- options:
-  #    drop_SLHA_file: true
-
   # Globally permit maximal mixing between gauge and family eigenstates
   - options:
       gauge_mixing_tolerance: 0.5
@@ -346,17 +321,11 @@ Rules:
   - capability: RD_fraction
     function: RD_fraction_leq_one
 
-  # Use DarkSUSY, MicrOmegas or the DarkBit native calculator for the relic density?
+  # Use MicrOmegas for the relic density
   - capability: RD_oh2
-    #function: RD_oh2_general
-    #function: RD_oh2_DarkSUSY
     function: RD_oh2_MicrOmegas
     options:
-      # for all calculations
       fast: 1
-      # used by RD_oh2_DarkSUSY only
-      omtype: 1
-      # used by RD_oh2_MicrOmegas only
       Beps: 1e-5
 
   # Choose to use detailed Fermi Pass 8 dwarf likelihoood from gamlike
@@ -369,12 +338,12 @@ Rules:
     options:
       allow_yield_extrapolation: true
 
-  # Use DarkSUSY or MicrOmegas for calculating direct detection couplings
+  # Use DarkSUSY for calculating direct detection couplings
   - capability: DD_couplings
     function: DD_couplings_DarkSUSY
-    #function: DD_couplings_MicrOmegas
 
   # Choose to get decays from DecayBit proper, not from an SLHA file.
+  # Also, discard points with stable charged SUSY particles
   - capability: decay_rates
     function: all_decays
     options:
@@ -397,50 +366,13 @@ Rules:
       use_higgs_2loop_at_at: true
       use_higgs_2loop_atau_atau: true
       invalid_point_fatal: false
+      # Only consider neutralino masses > 2.7 GeV, as anything less will be invalidated by the gamma-ray routines anyway.
+      mass_cut: [ ["|~chi0_1|", 2.7, 1e6] ]
 
   # Choose where to get the precision spectrum from
   - capability: MSSM_spectrum
     type: Spectrum
-    #function: make_MSSM_precision_spectrum_none
-    #function: make_MSSM_precision_spectrum_W
-    #function: make_MSSM_precision_spectrum_H_W
-    function: make_MSSM_precision_spectrum_4H_W
-    # The following options only have an impact when using make_MSSM_precision_spectrum_H_W
-    # or make_MSSM_precision_spectrum_H_W.
-    # Choose to take the precision prediction for the Higgs mass(es) (rather then spectrum generator's).
-    # Choose to use the difference between the precision and spectrum generator predictions, along
-    # with the precision error estimate, to estimate the theoretical error on the prediction.
-    options:
-      Higgs_predictions_source: 1
-      Higgs_predictions_error_method: 4
-
-  # Make sure to use the next-to-latest version (2.11.3) of FeynHiggs for things that need it,
-  # as the latest version (2.12.0) is buggy.
-  # In practice, the easiest way to do this is just to not install / nuke the versions you don't want to use, e.g.
-  #  make nuke-feynhiggs_2_12_0
-  #  make nuke-feynhiggs_2_11_2
-  # In a future version of GAMBIT, it will possible to just do this here in the yaml file:
-  #- backend: FeynHiggs
-  #  version: 2.11.3
-  # If you want to do it from the yaml file now, you need to do this:
-  #- capability: FH_Couplings_output
-  #  backends:
-  #  - {backend: FeynHiggs, version: 2.11.3}
-  #- capability: FH_Precision
-  #  backends:
-  #  - {backend: FeynHiggs, version: 2.11.3}
-  # The following two rules only have an impact when using make_MSSM_precision_spectrum_H_W
-  #- capability: prec_HiggsMasses
-  #  backends:
-  #  - {backend: FeynHiggs, version: 2.11.3}
-  #- capability: FH_MSSMMasses
-  #  backends:
-  #  - {backend: FeynHiggs, version: 2.11.3}
-
-  # Choose to get the precision value of the SM-like Higgs mass from FeynHiggs or SUSYHD
-  - capability: prec_mh
-    function: FH_HiggsMass
-    #function: SHD_HiggsMass
+    function: make_MSSM_precision_spectrum_none
 
   # Choose to use functions that get Higgs decays from SUSY-HIT, and t decays from DecayBit native implementation (instead of FeynHiggs)
   - capability: Reference_SM_Higgs_decay_rates
@@ -463,7 +395,6 @@ Rules:
   # Choose where to get the Higgs couplings from
   - capability: Higgs_Couplings
     function: MSSM_higgs_couplings_pwid
-    #function: MSSM_higgs_couplings_FH
 
   # Experimental values to be used in nuclear parameter likelihoods (all values in MeV)
   - capability: lnL_SI_nuclear_parameters
@@ -480,40 +411,6 @@ Rules:
     options:
       rho0_obs: 0.4
       rho0_obserr: 0.15
-
-  # Values to be used in local disk rotation speed likelihood (all values in km/s)
-  - capability: lnL_vrot
-    function: lnL_vrot_gaussian
-    options:
-      vrot_obs: 235
-      vrot_obserr: 20
-
-  # Values to be used in Maxwellian most-probable speed likelihood (all values in km/s)
-  - capability: lnL_v0
-    function: lnL_v0_gaussian
-    options:
-      v0_obs: 235
-      v0_obserr: 20
-
-  # Values to be used in local Galactic escape speed likelihood (all values in km/s)
-  - capability: lnL_vesc
-    function: lnL_vesc_gaussian
-    options:
-      vesc_obs: 550
-      vesc_obserr: 35
-
-  # Values to be used in PrecisionBit likelihood function for light quark masses
-  #- capability: lnL_light_quark_masses
-  #  options:
-  #    # m_u/m_d
-  #    mud_central: 0.48
-  #    mud_error: 0.10
-  #    # m_s / ((m_u + m_d)/2)
-  #    msud_central: 27.5
-  #    msud_error: 1.0
-  #    # m_s
-  #    ms_central: 95.E-03
-  #    ms_error: 5.E-03
 
 
   # ATLAS detector simulation
@@ -544,10 +441,6 @@ Rules:
                    "ATLAS_13TeV_1LEPStop_36invfb",
                    "ATLAS_13TeV_2LEPStop_36invfb",
                    "ATLAS_13TeV_2bMET_36invfb"] ]
-
-                   # "ATLAS_13TeV_RJ3L_lowmass_36invfb",
-                   # The RJ3L_lowmass is not yet public and the
-                   # analysis code currently contains dummy numbers.
 
   # CMS analysis setup
   - capability: CMSAnalysisContainer
