--- a/yaml_files/scans/Majorana/MajoranaDM_high_mass_diver.yaml
+++ b/yaml_files/scans/Majorana/MajoranaDM_high_mass_diver.yaml
@@ -21,7 +21,7 @@ Parameters:
       prior_type: log
     cosXI:
       range: [-1., 1]
-      prior_type: cos
+      prior_type: arccos
 
   nuclear_params_sigmas_sigmal:
     sigmas:
@@ -39,7 +39,8 @@ Parameters:
       range: [216, 264]
     vesc:
       range: [437, 629]
-    vrot: 235.0
+    vrot: 
+      same_as: Halo_gNFW_rho0::v0
     rs: 20.0
     r_sun: 8.5
     alpha: 1
@@ -196,7 +197,7 @@ Printer:
 
   options:
     output_file: "MDM_test.hdf5"
-    delete_file_on_restart: true
+    delete_file_on_restart: false
     group: "/MDM"    
 
 ##############################################################################################
@@ -215,7 +216,7 @@ Scanner:
     diver:
       plugin: diver
       like: LogLike
-      NP: 50000
+      NP: 20000
       verbosity: 1
       convthresh: 0.0001
 
