--- a/yaml_files/scans/Vector/VectorDM_low_mass_diver.yaml
+++ b/yaml_files/scans/Vector/VectorDM_low_mass_diver.yaml
@@ -36,7 +36,8 @@ Parameters:
       range: [216, 264]
     vesc:
       range: [437, 629]
-    vrot: 235.0
+    vrot: 
+      same_as: Halo_gNFW_rho0::v0
     rs: 20.0
     r_sun: 8.5
     alpha: 1
@@ -214,7 +215,7 @@ Scanner:
     diver:
       plugin: diver
       like: LogLike
-      NP: 50000
+      NP: 20000
       verbosity: 1
       convthresh: 0.0001
 
